[package]
name = "rust_impl"
version = "0.1.0"
authors = ["Twaha Rahman <mahi6703890@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.20"
lcs-image-diff = { version = "0.1", default-features = false }
